webkit2gtk (2.12.5-1) UNRELEASED; urgency=medium

  * New upstream release.
  * debian/patches/fix-ftbfs-m68k.patch:
    + Drop this patch, the m68k build has been broken for ages.

 -- Alberto Garcia <berto@igalia.com>  Mon, 05 Sep 2016 13:49:55 +0300

webkit2gtk (2.12.4-2) unstable; urgency=high

  * debian/rules:
    + Don't use the gold linker in mips/mipsel, see #834147.
  * Set urgency=high to get the CVE fixes into testing quickly.

 -- Alberto Garcia <berto@igalia.com>  Tue, 30 Aug 2016 10:53:50 +0300

webkit2gtk (2.12.4-1) unstable; urgency=medium

  * New upstream release.
    + Security fixes: CVE-2016-4622, CVE-2016-4624, CVE-2016-4591,
      CVE-2016-4590.
  * debian/patches/hide-gtk2-plugins.patch:
    + Remove, this is now upstream.

 -- Alberto Garcia <berto@igalia.com>  Wed, 24 Aug 2016 08:41:58 -0400

webkit2gtk (2.12.3-1) unstable; urgency=high

  * New upstream release (Closes: #821228).
    + This fixes CVE-2016-1856 and CVE-2016-1857.
  * debian/control:
    + Now that the GTK+ transition to 3.20 is done, we can revert the
      build dependency on gtk+3 back to >= 3.10.
  * debian/rules:
    + Pass '--with gir' to dh instead of overriding dh_shlibdeps.

 -- Alberto Garcia <berto@igalia.com>  Tue, 24 May 2016 11:17:40 +0200

webkit2gtk (2.12.2-1) unstable; urgency=medium

  * New upstream release (Closes: #803104).
  * debian/control:
    + Update build dependency on gtk+3 to >= 3.20 (see #820309).
    + Update Standards-Version to 3.9.8 (no changes needed).

 -- Alberto Garcia <berto@igalia.com>  Thu, 28 Apr 2016 11:46:35 +0300

webkit2gtk (2.12.1-1) unstable; urgency=medium

  * New upstream release.
  * debian/patches/fix-ftbfs-freebsd.patch,
    debian/patches/fix-ftbfs-powerpc.patch,
    debian/patches/fix-ftbfs-hurd.patch:
    + Remove, all these are upstream now.
  * debian/patches/fix-ftbfs-alpha.patch,
    debian/patches/fix-ftbfs-m68k.patch,
    debian/patches/fix-ftbfs-sparc64.patch,
    debian/patches/hide-gtk2-plugins.patch