@@ -27,7 +27,7 @@ Index: webkitgtk/Source/WTF/wtf/Platform.h
  #define WTF_CPU_NEEDS_ALIGNED_ACCESS 1
  #endif
  
-@@ -703,6 +709,7 @@
+@@ -697,6 +703,7 @@
      || CPU(ALPHA) \
      || CPU(ARM64) \
      || CPU(S390X) \
@@ -39,7 +39,7 @@ Index: webkitgtk/CMakeLists.txt
 ===================================================================
 --- webkitgtk.orig/CMakeLists.txt
 +++ webkitgtk/CMakeLists.txt
-@@ -65,6 +65,8 @@ elseif (LOWERCASE_CMAKE_SYSTEM_PROCESSOR
+@@ -63,6 +63,8 @@ elseif (LOWERCASE_CMAKE_SYSTEM_PROCESSOR
      set(WTF_CPU_S390 1)
  elseif (LOWERCASE_CMAKE_SYSTEM_PROCESSOR MATCHES "s390x")
      set(WTF_CPU_S390X 1)
@@ -52,7 +52,7 @@ Index: webkitgtk/Source/JavaScriptCore/CMakeLists.txt
 ===================================================================
 --- webkitgtk.orig/Source/JavaScriptCore/CMakeLists.txt
 +++ webkitgtk/Source/JavaScriptCore/CMakeLists.txt
-@@ -1287,6 +1287,7 @@ elseif (WTF_CPU_S390)
+@@ -1286,6 +1286,7 @@ elseif (WTF_CPU_S390)
  elseif (WTF_CPU_S390X)
  elseif (WTF_CPU_MIPS)
  elseif (WTF_CPU_SH4)
